# PokerBot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
docs/: rating_concept.md
shad_poker_bot/: config.py  main.py
shad_poker_bot/bot/: filters.py  formatting.py
shad_poker_bot/bot/handlers/: __init__.py  admin.py  common.py  player.py
shad_poker_bot/db/: __init__.py  models.py  repository.py
shad_poker_bot/services/: __init__.py  game.py  rating.py  seating.py
tests/: conftest.py  test_config.py  test_filters.py  test_formatting.py  test_game_service.py  test_rating.py  test_repository.py  test_seating.py
