[project]
name = "shad-poker-bot"
version = "1.0.0"
description = "Telegram-бот для покерного клуба ШАД с рейтинговой системой Эло"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["shad_poker_bot"]

[tool.coverage.run]
source = ["shad_poker_bot"]
omit = [
    "shad_poker_bot/main.py",
    "shad_poker_bot/bot/handlers/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
